k8s/lottery/devnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lottery
spec:
  replicas: 1
  revisionHistoryLimit: 2
  template:
    spec:
      serviceAccountName: default-irsa
      containers:
        - image: 440257901289.dkr.ecr.eu-west-1.amazonaws.com/lottery:latest
          name: lottery
          imagePullPolicy: Always
          command:
            - /app/api
          resources:
            limits:
              cpu: 50m
              memory: 150Mi
            requests:
              cpu: 50m
              memory: 150Mi
          ports:
            - containerPort: 8080
