k8s/lottery/devnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lottery
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: lottery.internal.service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lottery
            port:
              number: 80
